# standardised-vessel-dataset

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Ceataec.StandardizedVesselDataset.sln  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/python_scripts/: branch_checker.py  pr_title_validator.py  version_number_generator.py
.github/shell_scripts/: apply_version.sh  pr_title_validate.sh
.github/workflows/: build.yml  common-build.yml  dotnet-build.yml  main-build.yml  npm-build.yml
examples/SimpleExporter/: SimpleExporter.csproj
src/Ceataec.StandardisedVesselDataset/Exporters/: ISvdExporter.cs
src/Ceataec.StandardisedVesselDataset/Exporters/Models/: StandardizedVesselDatasetContent.cs
src/Ceataec.StandardisedVesselDataset/Models/: SpeedAndDistance.cs
src/Ceataec.StandardisedVesselDataset/Validators/: StandardisedVesselDatasetValidator.cs
src/Ceataec.StandardizedVesselDataset/: Ceataec.StandardizedVesselDataset.csproj
src/Ceataec.StandardizedVesselDataset/Exporters/: ISvdExporter.cs
src/Ceataec.StandardizedVesselDataset/Models/: FuelRemaing.cs  General.cs  SeaConditions.cs
src/Ceataec.StandardizedVesselDataset/Validators/: GeneralValidator.cs
src/Ceataec.StandardizedVesselDataset/Validators/Exceptions/: ValidatorException.cs
src/cpp/: .gitignore  CMakeLists.txt  README.md
src/cpp/cmake/: SvdConfig.cmake.in
src/cpp/examples/: CMakeLists.txt
src/cpp/examples/simple_exporter/: CMakeLists.txt  main.cpp
src/cpp/include/svd/: isvd_exporter.hpp  ivalidator.hpp  svd.hpp
src/cpp/include/svd/exporters/: base_exporter.hpp  isvd_exporter.hpp  svd_exporter_content.hpp
src/cpp/include/svd/exporters/formats/: format_exporters.hpp  svd_csv_exporter.hpp  svd_json_exporter.hpp  svd_xml_exporter.hpp
src/cpp/include/svd/models/: arrival_times.hpp  cargo_information.hpp  cylinder_lube_oil_information.hpp  deviation_from_planned.hpp  electricity_consumption.hpp  emissions.hpp  fresh_water.hpp  fuel_and_bunker_information.hpp  general_information.hpp  port_information.hpp  speed_and_distance.hpp  standardised_vessel_dataset.hpp  weather_information.hpp
src/cpp/include/svd/validators/: ivalidator.hpp  standardised_vessel_dataset_validator.hpp
src/cpp/include/svd/validators/errors/: validation_error.hpp
src/cpp/include/svd/validators/exceptions/: validation_exception.hpp
src/cpp/src/: CMakeLists.txt
src/cpp/src/svd/exporters/: base_exporter.cpp  svd_exporter_content.cpp
src/cpp/src/svd/exporters/formats/: svd_csv_exporter.cpp  svd_json_exporter.cpp  svd_xml_exporter.cpp
src/cpp/src/svd/models/: arrival_times.cpp  cargo_information.cpp  general_information.cpp  port_information.cpp  standardised_vessel_dataset.cpp  weather_information.cpp
src/cpp/src/svd/validators/: standardised_vessel_dataset_validator.cpp
src/cpp/src/svd/validators/errors/: validation_error.cpp
src/cpp/src/svd/validators/exceptions/: validation_exception.cpp
src/cpp/tests/unit/: CMakeLists.txt
src/cpp/tests/unit/exporters/: test_svd_json_exporter.cpp
src/cpp/tests/unit/models/: test_general_information.cpp  test_standardised_vessel_dataset.cpp
src/dotnet/: Ceataec.StandardisedVesselDataset.sln  Ceataec.StandardizedVesselDataset.sln  README.md  StandardisedVesselDataset.sln
src/dotnet/examples/SimpleExporter/: ExtendedStandardizedVesselDatasetValidator.cs  Program.cs  SimpleExporter.csproj  VesselReportData.cs
src/dotnet/src/Ceataec.StandardisedVesselDataset/: Ceataec.StandardisedVesselDataset.csproj
src/dotnet/src/StandardisedVesselDataset/: StandardisedVesselDataset.csproj
src/python/standardised_vessel_dataset/: README.md  pyproject.toml  requirements.txt
src/python/standardised_vessel_dataset/standardised_vessel_dataset/: __init__.py
src/python/standardised_vessel_dataset/standardised_vessel_dataset/exporters/: base.py  csv.py  json.py
src/python/standardised_vessel_dataset/standardised_vessel_dataset/models/: __init__.py  arrival_times.py  base.py  cargo_information.py  cylinder_lube_oil.py  dataset.py  deviation.py  electricity.py  emissions.py  fresh_water.py  fuel_bunker.py  general.py  port.py  speed_distance.py  weather.py
src/python/standardised_vessel_dataset/standardised_vessel_dataset/validators/: base.py  dataset.py  general.py
src/python/standardised_vessel_dataset/tests/: test_arrival_times.py  test_cargo_information.py  test_cylinder_lube_oil.py  test_dataset.py  test_deviation.py  test_electricity.py  test_emissions.py  test_exporters.py  test_fresh_water.py  test_fuel_bunker.py  test_general.py  test_port.py  test_speed_distance.py  test_validators.py  test_weather.py
src/typescript/: .gitignore  README.md  package.json  rollup.config.js  tsconfig.json
src/typescript/src/models/: ArrivalTimes.ts  CargoInformation.ts  CylinderLubeOilInformation.ts  DeviationFromPlanned.ts  ElectricityConsumption.ts  Emissions.ts  EmissionsReporting.ts  FreshWater.ts  FuelAndBunkerInformation.ts  FuelConsumption.ts  FuelReceived.ts  FuelRemaining.ts  General.ts  GeneralInformation.ts  PortAndRouteInformation.ts  PortInformation.ts  SeaConditions.ts  SpeedAndDistance.ts  StandardisedVesselDataset.ts  StandardizedVesselDataset.ts  Water.ts  Weather.ts  WeatherInformation.ts  index.ts
tests/unit/Ceataec.StandardisedVesselDataset.Tests/: Ceataec.StandardisedVesselDataset.Tests.csproj
tests/unit/Ceataec.StandardizedVesselDataset.Tests/: Ceataec.StandardizedVesselDataset.Tests.csproj
(+158 files in other folders)
